--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O-EEF</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="stylesheet" href="assets\css\styles.css">
@@ -18,10 +19,7 @@
                     <img class="d-block w-100" src="./assets/images/013 pic.JPEG" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="./assets/images/013 pic.JPEG" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="./assets/images/carousel/006 pic.JPEG" alt="Third slide">
+                    <img class="d-block w-100" src="./assets/images/carousel/006 pic.JPEG" alt="Second slide">
                 </div>
             </div>
         </div>
@@ -29,28 +27,37 @@
     </div>
     <div class="front-carousel">
         <section class="header">
-            <div class="container" style="max-width: 95%;">
-                <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-                    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                        <img class="bi me-2" width="40" height="32" src="./assets/images/O-M-icon.jfif">
-                        <span class="fs-4 text-white">O-EEF</span>
-                    </a>
+            <nav class="navbar navbar-expand-lg rounded border-bottom" aria-label="Thirteenth navbar example">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample11" aria-controls="navbarsExample11" aria-expanded="false" aria-label="Toggle navigation" style="color: white;">
+                        <svg xmlns="http://www.w3.org/2000/svg"  width="25 " height="25 " viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/></svg>
+                  </button>
 
-                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-                        <li><a href="#" class="nav-link px-2 FF8225">Home</a></li>
-                        <li><a href="#footer" class="nav-link px-2 custom-nav">Contact Us</a></li>
-                        <li><a href="#carousel" class="nav-link px-2 custom-nav">Experiences</a></li>
-                        <li><a href="about.html" class="nav-link px-2 custom-nav">About</a></li>
-                    </ul>
-                </header>
-            </div>
+                    <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
+                        <a class="navbar-brand col-lg-3 me-0" href="#"><img class="bi me-2" width="40" height="32" src="./assets/images/O-M-icon.jfif">
+                            <span class="fs-4 text-white">O-EEF</span></a>
+                        <ul class="navbar-nav col-lg-6 justify-content-lg-center">
+                            <li><a href="#" class="nav-link px-2 FF8225">Home</a></li>
+                            <li><a href="about.html#testimonials" class="nav-link px-2 custom-nav">Experiences</a></li>
+                            <li><a href="about.html" class="nav-link px-2 custom-nav">About</a></li>
+                            <li><a href="contacts.html" class="nav-link px-2 custom-nav">Contact Us</a></li>
+
+                        </ul>
+                        <div class="d-lg-flex col-lg-3 justify-content-lg-end">
+                            <form role="search">
+                                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </nav>
             <div class="container">
-                <div class="px-4 pt-5 my-5 text-center text-white">
-                    <h1 class="display-4 fw-bold FF8225 py-3">WELCOME TO O-EEF FOUNDATION</h1>
+                <div class="px-4 pt-3 my-3 text-center text-white">
+                    <h1 class="display-6 fw-bold FF8225 py-3">WELCOME TO O-EEF FOUNDATION</h1>
                     <div class="col-lg-6 mx-auto">
-                        <p class="lead mb-4">Here at Omotoyosi Elitefield Educational Foundation we are Empowering Underprivileged Children through Education.</p>
+                        <p class="lead mb-4">Empowering Underprivileged Children through Education.</p>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5 py-5">
-                            <button type="button" class="btn custom-btn btn-lg px-4" onclick="location.href='#footer'">Contact Us</button>
+                            <button type="button" class="btn custom-btn btn-lg px-4" onclick="location.href='contacts.html'">Contact Us</button>
                         </div>
                     </div>
 
@@ -60,14 +67,19 @@
     </div>
 
     <section class="features">
-        <div class="container col-xxl-8 px-4 py-5" style="max-width: 95%;">
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-                <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="./assets/images/features.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-                </div>
-                <div class="col-lg-6 g-text">
-                    <h1 class="display-5 fw-bold  lh-1 mb-3">Education is the Best Legacy</h1>
-                    <p class="lead">At Omotoyosi Elitefield Educational Foundation, we are dedicated to bridging the educational gap for underprivileged children. Our mission is to provide inclusive, quality education, and position them for better opportunities in life.
+
+        <div class="t-container">
+            <div class="container my-3 shadow-lg">
+                <div class="row p-4 pb-lg-5 pe-lg-5 pt-lg-5 align-items-center rounded-3 ">
+                    <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+                        <h1 class="display-5 fw-bold  lh-1 mb-3 center-text g-text">Education is the Best Legacy</h1>
+                        <p class="lead center-text">At Omotoyosi Elitefield Educational Foundation, we are dedicated to bridging the educational gap for underprivileged children. Our mission is to provide inclusive, quality education, and position them for better opportunities in
+                            life.
+
+                    </div>
+                    <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                        <img src="./assets/images/features.jpg" class=" testimonial-img rounded-lg-3 d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+                    </div>
                 </div>
             </div>
         </div>
@@ -114,12 +126,12 @@
                 </div> -->
                 <div class="carousel-inner">
                     <div class="carousel-item active text-center">
-                        <img src="./assets/images/carousel/001 pic.JPEG" class="d-block carousel-img" alt="carousel-pic">
+                        <img src="./assets/images/carousel/010 pic.JPEG" class="d-block carousel-img" alt="carousel-pic">
                         <h3 class="carousel-txt ">Launched our Saturday Enrichment Program...</h3>
                         <button type="button" class="btn custom-btn btn-lg px-4 my-4" onclick="location.href='about.html#testimonials'">Learn more</button>
                     </div>
                     <div class="carousel-item text-center">
-                        <img src="./assets/images/carousel/002 pic.JPEG" class="d-block carousel-img" alt="carousel-pic">
+                        <img src="./assets/images/scholarship.jpg" class="d-block carousel-img" alt="carousel-pic">
                         <h3 class="carousel-txt">Initiated a fully-funded, six-year scholarship program</h3>
                         <button type="button" class="btn custom-btn btn-lg px-4 my-4" onclick="location.href='about.html#testimonials'">Learn more</button>
                     </div>
@@ -216,10 +228,98 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="container marketing">
+            <div class="container text-center py-5">
+                <h1 class="display-5 fw-bold g-link lh-1 mb-3">Our Partners</h1>
+            </div>
+
+            <!-- Three columns of text below the carousel -->
+            <div class="row py-5 text-center">
+                <div class="col-lg-3">
+                    <img class="shadow-lg" src="./assets/images/partners/aiesec.jpg" alt="Generic placeholder image" width="140" height="140">
+                </div>
+                <!-- /.col-lg-4 -->
+                <div class="col-lg-3">
+                    <img class="shadow-lg" src="./assets/images/partners/alpa nigeria.jpg" alt="Generic placeholder image" width="140" height="140">
+                    <p style="color: rgb(206, 11, 11);">Alpha Nigeria</p>
+                </div>
+                <!-- /.col-lg-4 -->
+                <div class="col-lg-3">
+                    <img class="shadow-lg" src="./assets/images/partners/love for change.jpg" alt="Generic placeholder image" width="140" height="140">
+                </div>
+                <div class="col-lg-3">
+                    <img class="shadow-lg" src="./assets/images/partners/united way nigeria.jpg" alt="Generic placeholder image" width="140" height="140">
+                </div>
+                <!-- /.col-lg-4 -->
+            </div>
+            <!-- /.row -->
+
+        </div>
+    </section>
+    <section class="upcoming">
+        <div class="wrapper_">
+            <div class="" style="max-width: fit-content;">
+                <h1 class="mb-0 mt-4">Upcoming Events</h1>
+                <hr class="mb-5">
+            </div>
+
+            <i id="left" class="fa-solid  fas fa-angle-left"></i>
+            <ul class="carousel_">
+                <li class="card_">
+                    <div class="mx-3">
+                        <p style=" font-size: 50px;">23<span class="month" style=" font-size: 40px;">/Nov</span><span class="font-weight-light">2025</span></p>
+                        <div class="card-body my-5">
+                            <h1 class="card-title pricing-card-title u-text g-text">Sympozium</h1>
+                            <p>Educational lecture on lorem ipsum dolor sit amet</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="card_" style="align-items:start ;">
+                    <div class="mx-3">
+                        <p style=" font-size: 50px;">17<span class="month" style=" font-size: 40px;">/Nov</span><span class="font-weight-light">2025</span></p>
+                        <div class="card-body my-5">
+                            <h1 class="card-title pricing-card-title u-text g-text">Sympozium</h1>
+                            <p>Educational lecture on lorem ipsum dolor sit amet</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="card_">
+                    <div class="mx-3">
+                        <p style=" font-size: 50px;">15<span class="month" style=" font-size: 40px;">/Oct</span><span class="font-weight-light">2025</span></p>
+                        <div class="card-body my-5">
+                            <h1 class="card-title pricing-card-title u-text g-text">Sympozium</h1>
+                            <p>Educational lecture on lorem ipsum dolor sit amet</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="card_">
+                    <div class="mx-3">
+                        <p style=" font-size: 50px;">18<span class="month" style=" font-size: 40px;">/Apr</span><span class="font-weight-light">2025</span></p>
+                        <div class="card-body my-5">
+                            <h1 class="card-title pricing-card-title u-text g-text">Sympozium</h1>
+                            <p>Educational lecture on lorem ipsum dolor sit amet</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="card_">
+                    <div class="mx-3">
+                        <p style=" font-size: 50px;">20<span class="month" style=" font-size: 40px;">/Sep</span><span class="font-weight-light">2025</span></p>
+                        <div class="card-body my-5">
+                            <h1 class="card-title pricing-card-title u-text g-text">Sympozium</h1>
+                            <p>Educational lecture on lorem ipsum dolor sit amet</p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <i id="right" class="fa-solid fas fa-angle-right"></i>
+        </div>
+        <script src="script.js"></script>
+    </section>
     <section id="footer" class="footer">
         <div class="container" style="max-width: 95%;">
             <hr>
-            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-2">
                 <div class="col-md-4 d-flex align-items-center">
                     <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
 
@@ -250,6 +350,7 @@
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 </body>
 
