--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
             </div>
             <!-- Three columns of text below the carousel -->
             <div class="row text-center">
-                <div class="col-lg-4">
+                <div class="col-lg-4 pb-3">
                     <img class="rounded-circle" src="./assets/images/team/Samuel Habila sqr.jpg" alt="Generic placeholder image" width="140" height="140">
                     <h2 class="mt-3 dark">Samuel Habila</h2>
                     <p class="mb-5 dark">Head is Operations</p>
@@ -199,7 +199,7 @@
                     </p>
                 </div>
                 <!-- /.col-lg-4 -->
-                <div class="col-lg-4">
+                <div class="col-lg-4 pb-3">
                     <img class="rounded-circle" src="./assets/images/team/Michael ADEYOMOYE sqr.jpg" alt="Generic placeholder image" width="140" height="140">
                     <h2 class="mt-3 dark">Michael ADEYOMOYE</h2>
                     <p class="mb-5 dark">Programs Officer</p>
