--- a/contacts.html
+++ b/contacts.html
@@ -11,31 +11,36 @@
 </head>
 
 <body class="contacts">
-
-    <nav class="navbar navbar-expand-lg rounded border-bottom" aria-label="Thirteenth navbar example">
+    <nav class="navbar navbar-expand-lg rounded border-bottom" aria-label="Eleventh navbar example">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample11" aria-controls="navbarsExample11" aria-expanded="false" aria-label="Toggle navigation" style="color: white;">
-                <svg xmlns="http://www.w3.org/2000/svg"  width="25 " height="25 " viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/></svg>
-            </button>
+            <a class="navbar-brand col-lg-3 me-0" href="#"><img class="bi me-2" width="40" height="32" src="./assets/images/O-M-icon.jfif">
+                <span class="fs-4 text-white">O-EEF</span></a>
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
+                <svg xmlns="http://www.w3.org/2000/svg"  width="25 " height="25 " viewBox="0 0 448 512"><path fill="#ffffff" d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/></svg>
+          </button>
 
-            <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
-                <a class="navbar-brand col-lg-3 me-0" href="#"><img class="bi me-2" width="40" height="32" src="./assets/images/O-M-icon.jfif">
-                    <span class="fs-4 text-white">O-EEF</span></a>
-                <ul class="navbar-nav col-lg-6 justify-content-lg-center">
-                    <li><a href="index.html" class="nav-link px-2 FF8225">Home</a></li>
-                    <li><a href="about.html#testimonials" class="nav-link px-2 custom-nav">Experiences</a></li>
-                    <li><a href="about.html" class="nav-link px-2 custom-nav">About</a></li>
-                    <li><a href="contacts.html" class="nav-link px-2 FF8225">Contact Us</a></li>
-
+            <div class="navbar-collapse collapse" id="navbarsExample09" style="">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link px-2 FF8225">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="about.html#testimonials" class="nav-link px-2 custom-nav">Experiences</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="about.html" class="nav-link px-2 custom-nav">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contacts.html" class="nav-link px-2 FF8225">Contact Us</a>
+                    </li>
                 </ul>
-                <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                    <form role="search">
-                        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                    </form>
-                </div>
+                <form role="search">
+                    <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                </form>
             </div>
         </div>
     </nav>
+
     <div class="container">
         <header>
 
