--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </section>
     <section style="background-color: #00551c;">
         <div class="container text-center py-5">
-            <h1 class="display-5 fw-bold FF8225 lh-1 mb-3">Come along on a journey of hope and transformation</h1>
+            <h1 class="display-5 fw-bold FF8225 lh-1 mb-3">Come along on a journey of Hope and Transformation</h1>
         </div>
         <div class="container ">
             <iframe class="mb-5" width="100%" height="500" src="https://www.youtube.com/embed/MMF_HMYXyTs?si=fpHquBdQ5TkDABZW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
